--- a/Pasteur_Bizimungu.mw
+++ b/Pasteur_Bizimungu.mw
@@ -6,7 +6,7 @@
 
 {{DEFAULTSORT:Bizimungu, Pasteur}}
 
-[[Category:Rwanda]]
+[[Category:Abanyarwanda]] 
 [[Category:Abagabo]] 
 
 [[de:Pasteur Bizimungu]]
