--- a/Paul_Kagame.mw
+++ b/Paul_Kagame.mw
@@ -4,7 +4,7 @@
 
 {{DEFAULTSORT:Kagame, Paul}}
 
-[[Category:Rwanda]]
+[[Category:Abanyarwanda]] 
 {{Perezida wa Repubulika y'u Rwanda}}
 [[Category:Abagabo]] 
 
