--- a/Joseph_Habineza.mw
+++ b/Joseph_Habineza.mw
@@ -3,6 +3,6 @@
 == ==
 *[[Inama y’Abaminisitiri]]
 
-[[Category:Rwanda]]
+[[Category:Abanyarwanda]] 
 [[Category:Abaminisitiri]]
 [[Category:Abagabo]]
