--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -8,4 +8,18 @@
 *'''пине''' &ndash; '''пинет''' imbwe &ndash; imbwe
 *'''нармонь''' &ndash; '''нармоттне''' inyoni &ndash; inyoni
 
+== Amagambo n'interuro mu ikimokisha ==
+
+*'''аля''' &ndash; umugabo 
+*'''ава''' &ndash; umugore 
+*'''лем''' &ndash; izina
+*'''куд''' &ndash; inzu
+*'''лофца''' &ndash; amata
+*'''акша''' &ndash; umweru
+*'''фкя''' &ndash; rimwe
+*'''кафта''' &ndash; kabiri
+*'''колма''' &ndash; gatatu
+*'''ниле''' &ndash; kane
+*'''вете''' &ndash; gatanu
+
 [[Category:Indimi]]
