*Empty MediaWiki Message*

--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -64,3 +64,43 @@
 |}
 
 [[Category:Indimi]]
+
+[[af:Moksja]]
+[[ba:Мокша теле]]
+[[br:Mokcheg]]
+[[bg:Мокшански език]]
+[[ca:Moksha (llengua)]]
+[[cv:Мăкшă чĕлхи]]
+[[cs:Mokša (jazyk)]]
+[[de:Mokschanische Sprache]]
+[[et:Mokša keel]]
+[[myv:Мокшонь кель]]
+[[es:Idioma moksha]]
+[[eo:Mokŝa lingvo]]
+[[fr:Mokcha (langue)]]
+[[ko:목샤어]]
+[[hr:Mokša (jezik)]]
+[[id:Bahasa Moksha]]
+[[it:Lingua mokša]]
+[[koi:Мокша кыв]]
+[[kv:Мокша кыв]]
+[[lt:Mokšų kalba]]
+[[hu:Moksa nyelv]]
+[[mk:Мокшаски јазик]]
+[[mdf:Мокшень кяль]]
+[[ja:モクシャ語]]
+[[pl:Język moksza]]
+[[ru:Мокшанский язык]]
+[[sah:Мокша тыла]]
+[[se:Mokšagiella]]
+[[cu:Мо́кшєн҄ьскъ ѩꙁꙑ́къ]]
+[[szl:Mokszańsko godka]]
+[[fi:Mokšan kieli]]
+[[sv:Moksja]]
+[[ta:மோட்சா மொழி]]
+[[tt:Мукшы теле]]
+[[th:ภาษามอคชา]]
+[[uk:Мокшанська мова]]
+[[vi:Tiếng Moksha]]
+[[fiu-vro:Moksa kiil]]
+[[zh:莫克沙語]]
