--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -19,6 +19,14 @@
 **'''erkek''' &ndash; '''erkekler''' umugabo &ndash; abagabo 
 **'''ev''' &ndash; '''evler''' inzu &ndash; amazu
 
+== Amagambo n'interuro mu ikinyaturukiya ==
+
+*'''Gidiyorum''' &ndash; Ndagenda
+*'''Gidiyorsun''' &ndash; Uragenda
+*'''Gidiyor''' &ndash; Aragenda
+*'''Gidiyoruz''' &ndash; Turagenda
+*'''Gidiyorsunuz''' &ndash; Muragenda
+*'''Gidiyorlar''' &ndash; Baragenda
 
 [[Category:Indimi z’ikinyaturukiya]]
 
