/* Amagambo n'interuro mu ikinyaturukiya */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -21,12 +21,35 @@
 
 == Amagambo n'interuro mu ikinyaturukiya ==
 
-*'''Gidiyorum''' &ndash; Ndagenda
-*'''Gidiyorsun''' &ndash; Uragenda
-*'''Gidiyor''' &ndash; Aragenda
-*'''Gidiyoruz''' &ndash; Turagenda
-*'''Gidiyorsunuz''' &ndash; Muragenda
-*'''Gidiyorlar''' &ndash; Baragenda
+*'''Hangi dilleri konuşabiliyorsun?''' &ndash; Uvuga izihe ndimi?
+*'''Biraz Ruandaca konuşabiliyorum''' &ndash; Kinyarwanda cyanje n'igikye
+*'''Bilmiyorum''' &ndash; Simbizi
+*'''Biliyorum''' &ndash; Ndabizi
+
+*'''Evet''' &ndash; Yego
+*'''Hayır''' &ndash; Oya
+
+*'''Ne?''' &ndash; Iki?
+*'''Neden? / Niye? / Niçin?''' &ndash; Kuki?
+*'''Nasıl?''' &ndash; Bite?
+*'''Kim?''' &ndash; Nde?
+*'''Kimler?''' &ndash; Bande?
+*'''Ne zaman?''' &ndash; Ryali
+
+*'''Gidiyorum''' &ndash; Ndagenda ''cyangwa'' Ngiye
+*'''Gidiyorsun''' &ndash; Uragenda ''cyangwa'' Ugiye
+*'''Gidiyor''' &ndash; Aragenda ''cyangwa'' Agiye
+*'''Gidiyoruz''' &ndash; Turagenda ''cyangwa'' Tugiye
+*'''Gidiyorsunuz''' &ndash; Muragenda ''cyangwa'' Mugiye
+*'''Gidiyorlar''' &ndash; Baragenda ''cyangwa'' Bagiye
+
+*'''Yiyorum''' &ndash; Ndarya
+*'''Yiyorsun''' &ndash; Urarya
+*'''Yiyor''' &ndash; Ararya
+*'''Yiyoruz''' &ndash; Turarya
+*'''Yiyorsunuz''' &ndash; Murarya
+*'''Yiyorlar''' &ndash; Bararya
+
 
 [[Category:Indimi z’ikinyaturukiya]]
 
