/* Amagambo n'interuro mu ikinyaturukiya */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -34,7 +34,7 @@
 *'''Nasıl?''' &ndash; Bite?
 *'''Kim?''' &ndash; Nde?
 *'''Kimler?''' &ndash; Bande?
-*'''Ne zaman?''' &ndash; Ryali
+*'''Ne zaman?''' &ndash; Ryali?
 
 *'''Gidiyorum''' &ndash; Ndagenda ''cyangwa'' Ngiye
 *'''Gidiyorsun''' &ndash; Uragenda ''cyangwa'' Ugiye
