--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -125,7 +125,8 @@
 
 == U ==
 * '''UN''' cyangwa '''UNO''' [[Umuryango w’Abibumye]] (''United Nations'' cyangwe ''United Nations Organization'' )
-* '''UNİCEF''' Umuryango w’abibumye ryita ku bana
+*'''UNHCR'''  Ishami ry’ishirahamwe mpuzamakungu rijejwe impunzi
+* '''UNİCEF''' Umuryango w’abibumye ryita ku bana ''cyangwa'' Ishami ry’ishirahamwe mpuzamakungu rijejwe abana
 
 == V ==
 * '''VAT''' Umusoro ku Nyongeragaciro
