/* Amagambo n'interuro mu ikinyaturukiya */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -21,6 +21,11 @@
 
 == Amagambo n'interuro mu ikinyaturukiya ==
 
+*'''Merhaba''' &ndash; Muraho
+*'''Hoş geldin''' &ndash; Murakaza neza 
+*'''Nasılsın?''' &ndash; Amakuru? 
+*'''İyiyim''' &ndash; Ni meza 
+
 *'''Hangi dilleri konuşabiliyorsun?''' &ndash; Uvuga izihe ndimi?
 *'''Biraz Ruandaca konuşabiliyorum''' &ndash; Kinyarwanda cyanje n'igikye
 *'''Bilmiyorum''' &ndash; Simbizi
