*Empty MediaWiki Message*

--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -6,6 +6,9 @@
 ==  Notes  == 
 <references/>  
 
+== Imiyoboro ==
+*[http://www.igihe.com/news-7-11-555.html Rwanda : Urupfu rwa TITUS Umwami w’Ingagi muri Parike y’Ibirunga]
+
 [[Category:Inyamaswa]]  
 
 [[ar:غوريلا]]
