*Empty MediaWiki Message*

--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -1,12 +1,17 @@
 [[File:Male gorilla in SF zoo.jpg|thumb|250px|<font color="green">Ingagi (gabo)</font>]]
 [[File:Gorilla mother and baby at Volcans National Park.jpg|thumb|250px|<font color="green">Ingagi (gore)</font>]]
 
-'''Ingagi''' (izina mu [[kilatini]] ''Gorilla gorilla beringei'') <ref>[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=40&news_id=9021 Ingagi zo mu karere k’Ibirunga ziyongereyeho 26,3%]</ref>
+'''Ingagi''' (izina mu [[kilatini]] ''Gorilla gorilla beringei'') zigera kuri cumi n’ebyiri ndetse n’izindi nyamaswa, izo ngagi n’inyamaswa zari mu ishyamba ry’ibirunga zahunze umuriro wari umaze igihe uri gukongeza inkengero z’ishyamba z’ibirunga ku ruhande rw’u [[Rwanda]] ndetse na [[Uganda]], izo ngagi rero ngo zahisemo kugana ku ruhande rwa [[Repubulika iharanira Demokarasi ya Kongo]] kuko ariho zari zizeye umutekano kuko ho nta muriro wahageraga.
+
+Mu Rwanda hari ingagi zigera kuri Magana abiri na mirongo itandatu ziri mu gice cy’u Rwanda nk’uko bitangazwa na Rwanda News Agency aho amagana muri izo ngagi zibera mu misozi miremire yo mu birunga (Virunga), harimo iziba muri Pariki yo muri Uganda bita Mgahinga Gorilla National Park, [[Pariki y’ibirunga]] yo mu Rwanda ndetse n’iziba muri Pariki ya Virunga National Park yo muri Repubulika iharanira Demokarasi ya Kongo.
+
+Iyi nkongi yibasiye iki gice cy’ishyamba yatangiye kuwa gatandatu nk’uko bitangazwa n’ibiro ntaramakuru by’u Rwanda ngo nta kintu kizwi neza kuba cyarateye iyi nkongi ariko ngo bishoboka kuba ari abavumvu bateye iyi nkongi ariko ngo nta numwe uratabwa muri yombi. Ibindi byerekana ko iyi nkongi yatewe n’uko ari ikirere cyateye iyi nkongi kuko hari hari ubushyuhe bwinshi. <ref>[http://www.igihe.com/news-2-95-97.html Ingagi zo mu Rwanda zahungiye inkongi y’umuriro muri Congo Kinshasa]</ref>
 
 ==  Notes  == 
 <references/>  
 
 == Imiyoboro ==
+*[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=40&news_id=9021 Ingagi zo mu karere k’Ibirunga ziyongereyeho 26,3%]
 *[http://www.igihe.com/news-7-11-555.html Rwanda : Urupfu rwa TITUS Umwami w’Ingagi muri Parike y’Ibirunga]
 
 [[Category:Inyamaswa]]  
