--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -13,6 +13,7 @@ Iyi nkongi yibasiye iki gice cy’ishyamba yatangiye kuwa gatandatu nk’uko bit
 == Imiyoboro ==
 *[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=40&news_id=9021 Ingagi zo mu karere k’Ibirunga ziyongereyeho 26,3%]
 *[http://www.igihe.com/news-7-11-555.html Rwanda : Urupfu rwa TITUS Umwami w’Ingagi muri Parike y’Ibirunga]
+*[http://igihe.com/news-2-95-4770.html Igihombo gikomeye: Urupfu rw’ingagi eshanu mu Rwanda mu gihe cy’amezi icyenda]
 
 [[Category:Inyamaswa]]  
 
