--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -9,7 +9,7 @@ Mu mwaka wa 1929 iyo pariki yongerewe ubunini kuko yahise ifata ubutaka bw’ U 
 
 Nyuma y’uko Congo ibonye ubwingenge mu 1960 ndetse n’U Rwanda mu 1962, Pariki y’Igihugu y’Ibirunga yahise icikamo ibice bibiri, buri gihugu kigira agace gicunga, ku ruhande rw’U Rwanda iyo pariki yahise itangira kugabanuka ubunini kuko abaturage batangiye kuyisatira bashaka aho gutura no guhinga.
 
-Mu mwaka wa 1967 iyi pariki yabaye intangiriro y’ubushakashatsi ku ngagi bw’ Umunyamerikakazi wabaye ikirangirire mu bushakashatsi bw’ibidukikije, Diana Fossey. Akigera muri Pariki y’Igihugu y’Ibirunga yahise atangiza ikigo cy’ubushakashatsi yise Karisoke Research Centre, hagati ya Karisimbi na Bisoke. Guhera ubwo, igihe cye kinini yagifataga muri pariki, kandi akeshwa kuba yarahesheje agaciro ingagi zo mu Rwanda, asaba ko zitabwaho ku rwego mpuzamahanga.
+Mu mwaka wa 1967 iyi pariki yabaye intangiriro y’ubushakashatsi ku ngagi bw’ Umunyamerikakazi wabaye ikirangirire mu bushakashatsi bw’ibidukikije, Diana Fossey. Akigera muri Pariki y’Igihugu y’Ibirunga yahise atangiza ikigo cy’ubushakashatsi yise Karisoke Research Centre, hagati ya Karisimbi na Bisoke. Guhera ubwo, igihe cye kinini yagifataga muri pariki, kandi akeshwa kuba yarahesheje agaciro [[ingagi]] zo mu Rwanda, asaba ko zitabwaho ku rwego mpuzamahanga.
 
 Diana Fossey yiciwe mu rugo iwe mu mwaka w’1985, azize abashimusi batazwi yari amaze igihe akumira, ahambwa muri pariki y’Ibirunga hafi y’ikigo cy’ubushakashatsi yari yarashinze.
 
