--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -1,8 +1,9 @@
 [[File:Gorilla mother and baby at Volcans National Park.jpg|thumb|250px|<font color="grey">Ingagi zo mu birunga (gore) mu Rwanda</font>]]
 [[File:Susa group, mountain gorilla.jpg|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
-
+[[File:Silverback.JPG|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 
 '''Ingagi zo mu birunga''' cyangwa '''Ingagi zo mu misozi''' (izina mu [[kilatini]]: ''Gorilla beringei beringei'')
+
 
 ==  Notes  == 
 <references/>  
