*Empty MediaWiki Message*

--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -2,7 +2,7 @@
 [[File:Susa group, mountain gorilla.jpg|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 [[File:Silverback.JPG|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 
-'''Ingagi zo mu birunga''' cyangwa '''Ingagi zo mu misozi''' (izina mu [[kilatini]]: ''Gorilla beringei beringei'')
+'''Ingagi zo mu birunga''' cyangwa '''Ingagi zo mu misozi''' (izina mu [[kilatini]]: ''Gorilla beringei beringei''),ni bumwe mu bwoko bw’inyamaswa buri gucika cyane ku isi. Ubu habarwa [[ingagi]] zo mu birunga zigera kuri 720 ku isi yose, kandi zose ziherere mu majyaruguru y’igihugu cy’u [[Rwanda]], mu majyepfo ya [[Uganda]] ndetse no mu burasirazuba bwa [[Repubulika iharanira Demokarasi ya Kongo]].
 
 
 ==  Notes  == 
