*Empty MediaWiki Message*

--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -9,6 +9,17 @@ Ingangi zabazwe ni izo muri Pariki eshatu arizo: [[pariki y’Ibirunga]] y’u R
 
 Abayobozi kandi basobobanuye o iri barurwa ryakozwe mu rwego rwo kumenya uko ibintu byifashe ndetse no kureba uko ingagi zimerewe. Ibyavuye mu ibarura bikaba ari bumwe mu bushakashatsi bukomeye buzaba buhari bwerekana ubuzima bw’izi ngagi ndetse n’uko zibanyeho mu miryango yazo.
 
+Ibarura ryakozwe mu Birunga kuva muri Werurwe kugeza muri Mata uyu mwaka, ryerekanye ko umubare w’ingagi wiyongereyeho 26,3% mu myaka irindwi ishize. Ni ukuvuga ko zagiye ziyongeraho 3,7% buri mwaka.
+
+Iri barura ryasanze hari ingagi zo mu misozi 480 ziri mu miryango 36 hamwe n’izindi ngabo 14 zigiye zibana. Ibarura ryaherukaga kuba muri 2003, ryari ryabonye ingagi 380.
+
+Kugeza kuri uyu munsi, ushyizemo n’ingagi 302 zari zabazwe muri 2006 mu ishyamba rya Bwindi n’zindi enye zabuze ababyeyi zikaba zirererwa mu kigo cyo muri Repubulika iharanira Demokarasi ya Kongo, umubare w’ingagi zo mu misozi zizwi ku isi ni 786.
+
+Ingagi zo mu Birunga, zagiye zibasirwa n’intambara zo mu Karere n’ubushimusi mu myaka ishize, zamenyekanye cyane kubera nyakwigendera [[Dian Fossey]], zikaba ari kimwe mu bintu bikururura ba mukerarugendo benshi mu Karere.
+
+Mu ishyamba ry’ibimera byiza cyane biri mu birunga bigabanya u Rwanda na Uganda niho habarizwa ingagi zo mu birunga zikunda gusurwa cyane ku isi. Iyi pariki ifite ubwoko bw’ ingagi nyakwigendera Dian Fossey yapfuye agerageza kurwana ku buzima bwazo. Ingagi zo mu birunga zisigaye zigera kuri 355, kandi ibimera bihora bitoshye nibyo bituma zidakomeza gucika ku isi.
+
+Iyi pariki igizwe n’ubwoko butandukanye bw’ibimera , aho usanga hari ishyamba ry’ ibimera bito ndetse harimo n’ibiti binini bitandukanye bibereye ijisho.
 
 ==  Notes  == 
 <references/>  
