*Empty MediaWiki Message*

--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -1,11 +1,9 @@
 [[File:Male gorilla in SF zoo.jpg|thumb|250px|<font color="green">Ingagi (gabo)</font>]]
 [[File:Gorilla mother and baby at Volcans National Park.jpg|thumb|250px|<font color="green">Ingagi (gore)</font>]]
 
-'''Ingagi''' (izina mu [[kilatini]] ''Gorilla gorilla beringei'') zigera kuri cumi n’ebyiri ndetse n’izindi nyamaswa, izo ngagi n’inyamaswa zari mu ishyamba ry’ibirunga zahunze umuriro wari umaze igihe uri gukongeza inkengero z’ishyamba z’ibirunga ku ruhande rw’u [[Rwanda]] ndetse na [[Uganda]], izo ngagi rero ngo zahisemo kugana ku ruhande rwa [[Repubulika iharanira Demokarasi ya Kongo]] kuko ariho zari zizeye umutekano kuko ho nta muriro wahageraga.
+'''Ingagi''' (izina mu [[kilatini]] ''Gorilla'') 
 
-Mu Rwanda hari ingagi zigera kuri Magana abiri na mirongo itandatu ziri mu gice cy’u Rwanda nk’uko bitangazwa na Rwanda News Agency aho amagana muri izo ngagi zibera mu misozi miremire yo mu birunga (Virunga), harimo iziba muri Pariki yo muri Uganda bita Mgahinga Gorilla National Park, [[Pariki y’ibirunga]] yo mu Rwanda ndetse n’iziba muri Pariki ya Virunga National Park yo muri Repubulika iharanira Demokarasi ya Kongo.
-
-Iyi nkongi yibasiye iki gice cy’ishyamba yatangiye kuwa gatandatu nk’uko bitangazwa n’ibiro ntaramakuru by’u Rwanda ngo nta kintu kizwi neza kuba cyarateye iyi nkongi ariko ngo bishoboka kuba ari abavumvu bateye iyi nkongi ariko ngo nta numwe uratabwa muri yombi. Ibindi byerekana ko iyi nkongi yatewe n’uko ari ikirere cyateye iyi nkongi kuko hari hari ubushyuhe bwinshi. <ref>[http://www.igihe.com/news-2-95-97.html Ingagi zo mu Rwanda zahungiye inkongi y’umuriro muri Congo Kinshasa]</ref>
+Amoko menshi y’ inguge hari byinshi ahuriyeho n’ abantu ariko ingagi zo ni akarusho! Ibirenge n’intoki byazo biteye nk’iby'abantu kurusha ubundi bwoko bwose bw’inguge ; ingagi zimara igihe kinini ku butaka kurusha izindi nguge zose, niyo mpamvu ibirenge byazo bishobora kugenda nta kibazo. Ibi ubibonera cyane ku ngagi zo mu birunga.<ref>[http://www.igihe.com/news-2-95-1258.html Ingagi zo mu Birunga: inyamaswa zifite byinshi zihuriyeho n\'abantu]</ref>
 
 ==  Notes  == 
 <references/>  
