*Empty MediaWiki Message*

--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -5,6 +5,10 @@
 
 Amoko menshi y’ inguge hari byinshi ahuriyeho n’ abantu ariko ingagi zo ni akarusho! Ibirenge n’intoki byazo biteye nk’iby'abantu kurusha ubundi bwoko bwose bw’inguge ; ingagi zimara igihe kinini ku butaka kurusha izindi nguge zose, niyo mpamvu ibirenge byazo bishobora kugenda nta kibazo. Ibi ubibonera cyane ku ngagi zo mu birunga.<ref>[http://www.igihe.com/news-2-95-1258.html Ingagi zo mu Birunga: inyamaswa zifite byinshi zihuriyeho n\'abantu]</ref>
 
+== ==
+*'''[[Ingagi zo mu birunga]]''' cyangwa [[Ingagi zo mu misozi]] (Gorilla beringei)
+*'''[[Ingagi yo mu burengerazuba]]''' (Gorilla gorilla) 
+
 ==  Notes  == 
 <references/>  
 
