--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -7,7 +7,7 @@ Amoko menshi y’ inguge hari byinshi ahuriyeho n’ abantu ariko ingagi zo ni a
 
 == ==
 *'''[[Ingagi zo mu birunga]]''' cyangwa [[Ingagi zo mu misozi]] (''Gorilla beringei'')
-*'''[[Ingagi yo mu burengerazuba]]''' (''Gorilla gorilla'') 
+*'''[[Ingagi zo mu burengerazuba]]''' (''Gorilla gorilla'') 
 
 ==  Notes  == 
 <references/>  
