--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -6,7 +6,7 @@
 Amoko menshi y’ inguge hari byinshi ahuriyeho n’ abantu ariko ingagi zo ni akarusho! Ibirenge n’intoki byazo biteye nk’iby'abantu kurusha ubundi bwoko bwose bw’inguge ; ingagi zimara igihe kinini ku butaka kurusha izindi nguge zose, niyo mpamvu ibirenge byazo bishobora kugenda nta kibazo. Ibi ubibonera cyane ku ngagi zo mu birunga.<ref>[http://www.igihe.com/news-2-95-1258.html Ingagi zo mu Birunga: inyamaswa zifite byinshi zihuriyeho n\'abantu]</ref>
 
 == ==
-*'''[[Ingagi zo mu birunga]]''' cyangwa [[Ingagi zo mu misozi]] (''Gorilla beringei''): Zigera kuri cumi n’ebyiri ndetse n’izindi nyamaswa, izo ngagi n’inyamaswa zari mu ishyamba ry’ibirunga zahunze umuriro wari umaze igihe uri gukongeza inkengero z’ishyamba z’ibirunga ku ruhande rw’u Rwanda ndetse na Uganda, izo ngagi rero ngo zahisemo kugana ku ruhande rwa Repubulika iharanira Demokarasi ya Kongo kuko ariho zari zizeye umutekano kuko ho nta muriro wahageraga.
+*'''[[Ingagi zo mu birunga]]''' cyangwa [[Ingagi zo mu misozi]] (''Gorilla beringei''): Zigera kuri cumi n’ebyiri ndetse n’izindi nyamaswa, izo ngagi n’inyamaswa zari mu ishyamba ry’ibirunga zahunze umuriro wari umaze igihe uri gukongeza inkengero z’ishyamba z’ibirunga ku ruhande rw’u [[Rwanda]] ndetse na [[Uganda]], izo ngagi rero ngo zahisemo kugana ku ruhande rwa [[Repubulika iharanira Demokarasi ya Kongo]] kuko ariho zari zizeye umutekano kuko ho nta muriro wahageraga.
 *'''[[Ingagi zo mu burengerazuba]]''' (''Gorilla gorilla'') 
 
 ==  Notes  == 
