*Empty MediaWiki Message*

--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -21,6 +21,8 @@ Mu ishyamba ry’ibimera byiza cyane biri mu birunga bigabanya u Rwanda na Ugand
 
 Iyi pariki igizwe n’ubwoko butandukanye bw’ibimera , aho usanga hari ishyamba ry’ ibimera bito ndetse harimo n’ibiti binini bitandukanye bibereye ijisho.
 
+Iyi nkongi yibasiye iki gice cy’ishyamba yatangiye kuwa gatandatu nk’uko bitangazwa n’ibiro ntaramakuru by’u Rwanda ngo nta kintu kizwi neza kuba cyarateye iyi nkongi ariko ngo bishoboka kuba ari abavumvu bateye iyi nkongi ariko ngo nta numwe uratabwa muri yombi. Ibindi byerekana ko iyi nkongi yatewe n’uko ari ikirere cyateye iyi nkongi kuko hari hari ubushyuhe bwinshi. 
+
 ==  Notes  == 
 <references/>  
 
