*Empty MediaWiki Message*

--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -21,7 +21,13 @@ Mu ishyamba ry’ibimera byiza cyane biri mu birunga bigabanya u Rwanda na Ugand
 
 Iyi pariki igizwe n’ubwoko butandukanye bw’ibimera , aho usanga hari ishyamba ry’ ibimera bito ndetse harimo n’ibiti binini bitandukanye bibereye ijisho.
 
+Ingagi zo mu birunga nk’ubundi bwoko bw’inguge, ziba mu mashyamba agwamo cyane imvura.Kereka impundu (chimpanzee)nizo zishobora gutura mu bice bya savannah(ubutaka buriho ibimera bigufi kandi imvura idakunda kugwaho cyane).
+
+Ingagi zibaho zimuka buri gihe kuko zicumbika ahantu zibasha kubona ibyo kurya. Ahanini zirya ibimera kandi zikabirya ari byinshi. Ingagi zigira amenyo ameze nk’aya'abantu, niyo mpamvu zishobora gukanja ibyatsi byinshi. Ingagi z’ingabo zikuze zigira amenyo manini zikoresha iyo ziri kurwana na zigenzi zazo .
+
 Iyi nkongi yibasiye iki gice cy’ishyamba yatangiye kuwa gatandatu nk’uko bitangazwa n’ibiro ntaramakuru by’u Rwanda ngo nta kintu kizwi neza kuba cyarateye iyi nkongi ariko ngo bishoboka kuba ari abavumvu bateye iyi nkongi ariko ngo nta numwe uratabwa muri yombi. Ibindi byerekana ko iyi nkongi yatewe n’uko ari ikirere cyateye iyi nkongi kuko hari hari ubushyuhe bwinshi. 
+
+Mu mwaka wa 1978 nibwo umushinga Mountain gorilla watangiye, maze ingagi zo mu birunga ziherereye mu gice cy’u Rwanda zitangira kumenyerezwa gusurwa naba mukerarugendo.Kuva 1973 kugeza 1989,umubare w’ingagi zo mu birunga wariyongereye ziva kuri 261 zigera kuri 324. Abantu bamwe bakeka ko ubukerarugendo bwaba bwaragize uruhare muri uku kwiyongera kw'ingagi.
 
 ==  Notes  == 
 <references/>  
