--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -1,11 +1,12 @@
 [[File:Gorilla mother and baby at Volcans National Park.jpg|thumb|250px|<font color="grey">Ingagi zo mu birunga (gore) mu Rwanda</font>]]
-[[File:Susa group, mountain gorilla.jpg|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 [[File:Silverback.JPG|thumb|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 [[File:Dian Fossey.jpg|thumb|250px|<font color="grey">Dian Fossey</font>]]
 
 '''Ingagi zo mu birunga'''<ref>[http://www.igihe.com/news-2-95-1258.html Ingagi zo mu Birunga: inyamaswa zifite byinshi zihuriyeho n\'abantu]</ref><ref>[http://www.rwandagateway.org/rw/spip.php?article625 Ingagi zo mu Birunga zariyongereye]</ref> cyangwa '''Ingagi zo mu misozi''' (izina mu [[kilatini]]: ''Gorilla beringei beringei''), ni bumwe mu bwoko bw’inyamaswa buri gucika cyane ku isi. Ubu habarwa [[ingagi]] zo mu birunga zigera kuri 720 ku isi yose, kandi zose ziherere mu majyaruguru y’igihugu cy’u [[Rwanda]], mu majyepfo ya [[Uganda]] ndetse no mu burasirazuba bwa [[Repubulika iharanira Demokarasi ya Kongo]].
 
 Ingangi zabazwe ni izo muri Pariki eshatu arizo: [[pariki y’Ibirunga]] y’u Rwanda, Parc y’Ibirunga ya Repubulika iharanira Demokarasi ya Kongo na Mgahinga Gorilla National park yo muri Uganda. Nyamara hari izindi ziri mu ishymba ry’inzitane rya Bwindi rya Pariki y’igihugu cya Uganda.
+
+[[File:Susa group, mountain gorilla.jpg|thumb|left|250px|<font color="grey">Ingagi zo mu birunga  (gabo)</font>]]
 
 Abayobozi kandi basobobanuye o iri barurwa ryakozwe mu rwego rwo kumenya uko ibintu byifashe ndetse no kureba uko ingagi zimerewe. Ibyavuye mu ibarura bikaba ari bumwe mu bushakashatsi bukomeye buzaba buhari bwerekana ubuzima bw’izi ngagi ndetse n’uko zibanyeho mu miryango yazo.
 
