--- a/Ingagi_zo_mu_birunga.mw
+++ b/Ingagi_zo_mu_birunga.mw
@@ -34,3 +34,22 @@ Mu mwaka wa 1978 nibwo umushinga Mountain gorilla watangiye, maze ingagi zo mu b
 <references/>  
 
 [[Category:Inyamabere]]
+
+[[ca:Goril·la de muntanya]]
+[[da:Bjerggorilla]]
+[[de:Berggorilla]]
+[[en:Mountain Gorilla]]
+[[es:Gorilla beringei beringei]]
+[[eo:Monta gorilo]]
+[[fr:Gorille des montagnes]]
+[[ko:산악고릴라]]
+[[it:Gorilla beringei beringei]]
+[[he:גורילת הרים]]
+[[hu:Hegyi gorilla]]
+[[nl:Berggorilla]]
+[[pl:Goryl górski]]
+[[pt:Gorila-das-montanhas]]
+[[sq:Gorilla e malit]]
+[[fi:Vuorigorilla]]
+[[sv:Bergsgorilla]]
+[[zh:山地大猩猩]]
