*Empty MediaWiki Message*

--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -36,25 +36,13 @@ Mu rwego rw’ isi, iyi pariki izwi cyane ku ngagi zo mu misozi (''Gorilla berin
 [[Category:Pariki Nasiyonali]] 
 [[Category:Ubukerarugendo]] 
 
-[[bg:Вирунга (национален парк)]]
-[[cs:Národní park Virunga]]
-[[de:Nationalpark Virunga]]
-[[en:Virunga National Park]]
-[[et:Virunga rahvuspark]]
-[[es:Parque Nacional Virunga]]
-[[fr:Parc national des Virunga]]
-[[ko:비룽가 국립공원]]
-[[hi:विरुन्गा राष्ट्रीय उद्यान]]
-[[it:Parco nazionale di Virunga]]
-[[he:הפארק הלאומי וירונגה]]
-[[hu:Virunga Nemzeti Park]]
-[[nl:Nationaal park Virunga]]
-[[ja:ヴィルンガ国立公園]]
-[[no:Virunga nasjonalpark]]
-[[pl:Park Narodowy Wirunga]]
-[[pt:Parque nacional de Virunga]]
-[[ru:Вирунга (национальный парк)]]
-[[fi:Virungan kansallispuisto]]
-[[sv:Virunga nationalpark]]
-[[th:อุทยานแห่งชาติวิรุงกา]]
-[[zh:維龍加國家公園]]
+
+[[de:Vulkan-Nationalpark]]
+[[en:Volcanoes National Park]]
+[[eo:Nacia Parko de Vulkanoj]]
+[[fr:Parc national des Volcans]]
+[[it:Parco Nazionale dei Vulcani]]
+[[hu:Volcanoes Nemzeti Park]]
+[[pl:Park Narodowy Wulkanów]]
+[[ru:Национальный парк Вулканов]]
+[[zh:盧旺達火山國家公園]]
