*Empty MediaWiki Message*

--- a/Pariki_y’Ibirunga_ya_Repubulika_Iharanira_Demokarasi_ya_Kongo.mw
+++ b/Pariki_y’Ibirunga_ya_Repubulika_Iharanira_Demokarasi_ya_Kongo.mw
@@ -1,4 +1,4 @@
-[File:Nyiragongo2004.jpg |thumb|250px|<font color="green">Pariki y’Ibirunga ya Repubulika Iharanira Demokarasi ya Kongo</font>]] 
+[[File:Nyiragongo2004.jpg |thumb|250px|<font color="green">Pariki y’Ibirunga ya Repubulika Iharanira Demokarasi ya Kongo</font>]] 
 [[File:Virunga 03.jpg|thumb|250px|<font color="green">Pariki y’Ibirunga ya Repubulika Iharanira Demokarasi ya Kongo</font>]] 
 
 '''Pariki y’Ibirunga ya Repubulika Iharanira Demokarasi ya Kongo''' 
