--- a/Pariki_ya_Nyungwe.mw
+++ b/Pariki_ya_Nyungwe.mw
@@ -17,7 +17,7 @@ Iyo witegereje neza muri Pariki ya Nyungwe, ubona ko habonekamo amoko 13 y’[[i
 
 Dore amwe mu moko y’[[inguge]] ziri muri Pariki ya Nyungwe: [[icyondi]] (''Cercopithecus lhoesti''), [[igihinyage]], [[inkomo]] (''Colobus angolensis ruwenzori''), [[inkima]] (''Cercopithecus mitis doggetti & kandti'' ), [[inyenzi]], [[impundu]] (''Pan troglodytes schweinfurtii'').
 
-Muri iyi pariki ya Nyungwe kandi ushobora kuhabona andi moko y’inguge atandukanye arimo; [[Umukunga]] (''Cercopithecus ascanius schmidti''), [[inkendi]] (''Cercopithecus aethiops''), [[igishabaga]] (''Cercopithecus albigena johnostonii''), Galago zo mu burasirazuba, Galago ntoya n’inini ndetse n’Igitera.
+Muri iyi pariki ya Nyungwe kandi ushobora kuhabona andi moko y’inguge atandukanye arimo; [[Umukunga]] (''Cercopithecus ascanius schmidti''), [[inkendi]] (''Cercopithecus aethiops''), [[igishabaga]] (''Cercopithecus albigena johnostonii''), [[Galago zo mu burasirazuba, Galago ntoya n’inini ndetse n’Igitera.
 
 Nyungwe irushaho kuba agahebuzo kubera inguge zayo. Muri rusange zirimo amoko 13, harimo n’izisa n’umuntu cyane bita impundu, tutibagiwe inguge y’ubwoko bw’ibyondi (''Cercopithecus lhoesti'') hamwe n’amagana y’ubushyo buteye ubwuzu z’[[inkomo]] (''Colobus angolensis ruwenzori'').
 
