--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -36,6 +36,7 @@
 
 == E ==
 * '''EAC''' [[Umuryango w’Ibihugu by’Iburasirazuba bw’Afurika]] (Umuryango w’ibihugu by’Afurika y’iburasirazuba) (''East African Community'')
+*'''EALA''' [[Amategeko y’Akarere ka Afurika y’I Burasirazuba]] (''East African Legislative Assembly'')
 * '''ECCAS''' [[Umuryango w’Ubukungu bw’Afurika yo Hagati]]
 * '''EDPRS''' Ingamba z’igihugu zigamije iterambere ry’ubukungu no kurwanya ubukene
 * '''EICV''' Ibarura ku mibereho y’ingo
