*Empty MediaWiki Message*

--- a/Ingagi.mw
+++ b/Ingagi.mw
@@ -17,7 +17,7 @@ Amoko menshi y’ inguge hari byinshi ahuriyeho n’ abantu ariko ingagi zo ni a
 *[http://www.igihe.com/news-7-11-555.html Rwanda : Urupfu rwa TITUS Umwami w’Ingagi muri Parike y’Ibirunga]
 *[http://igihe.com/news-2-95-4770.html Igihombo gikomeye: Urupfu rw’ingagi eshanu mu Rwanda mu gihe cy’amezi icyenda]
 
-[[Category:Inyamaswa]]  
+[[Category:Inyamabere]]    
 
 [[ar:غوريلا]]
 [[bn:গরিলা]]
