*Empty MediaWiki Message*

--- a/Mariko_Polo.mw
+++ b/Mariko_Polo.mw
@@ -1,7 +1,123 @@
 [[File:Marco Polo portrait.jpg|thumb|250px|<font color="grey">Mariko Polo </font>]]
 
-Ubwo ’’’Mariko Polo’’’ yari agarutse mu mugi yari atuyemo wa [[Venice]] (soma [[Venise]]) nyuma y’imyaka myinshi yari amaze mu Burasirazuba, incuti ze zatekereje ko ingendo ze ndende zatumye aba umusazi. Yababwiye ibitekerezo batashoboye kwizera.
+Ubwo '''Mariko Polo''' yari agarutse mu mugi yari atuyemo wa [[Venice]] (soma [[Venise]]) nyuma y’imyaka myinshi yari amaze mu Burasirazuba, incuti ze zatekereje ko ingendo ze ndende zatumye aba umusazi. Yababwiye ibitekerezo batashoboye kwizera.
 
 Mariko yari yanyuze mu mugi wuzuyemo ifeza n’izahabu. Yari yarabonye amabuye y’umukara ashya, nyamara nta muntu n’umwe wari warigeze yumva iby’amahindure yaka mu birunga. Yari yarabonye umwenda udashya n’ubwo wawujugunya mu muriro, nyamara nta muntu n’umwe wari warigeze yumva ibya bene iyo myenda bita abestos. Yavuze ibyerekeye ibiyoka binini bifite uburebure bwa metero icumi bifite inzasaya nini cyane ku buryo zishobora kumira umuntu, amatunda afite ubunini bungana n’umutwe w’umuntu kandi akagira imbere hererana nk’amata, n’ibintu bitemba biva mu butaka bishobora gutuma amatara yaka. Nyamara nta muntu n’umwe wari warigeze abona ingona zo mu ruzi, amatunda y’ibiti bya [[koko]] (''noix de coco''), cyangwa [[peteroli]]. Baramusetse ubwo bumvaga ibyo bitekerezo. Hashize iminsi myinshi ubwo Mariko yari aryamye agiye gupfa, umwe mu ncuti ze utaravugaga rumwe na we wari hafi y’aho yari aryamye yamubwiye kwivuguruza akabwira abari aho ko ibitekerezo yababwiye byose byari ibinyoma. 
 
 [[Category:Abagabo]]
+
+[[af:Marco Polo]]
+[[am:ማርኮ ፖሎ]]
+[[ar:ماركو بولو]]
+[[an:Marco Polo]]
+[[ast:Marco Polo]]
+[[az:Marko Polo]]
+[[bn:মার্কো পোলো]]
+[[be:Марка Пола]]
+[[be-x-old:Марка Пола]]
+[[bcl:Marco Polo]]
+[[bo:མཱར་ཁོ་ཕོ་ལོ།]]
+[[bs:Marco Polo]]
+[[br:Marco Polo]]
+[[bg:Марко Поло]]
+[[ca:Marco Polo]]
+[[cv:Марко Поло]]
+[[cs:Marco Polo]]
+[[cy:Marco Polo]]
+[[da:Marco Polo]]
+[[de:Marco Polo]]
+[[et:Marco Polo]]
+[[el:Μάρκο Πόλο]]
+[[es:Marco Polo]]
+[[eo:Marko Polo]]
+[[eu:Marco Polo]]
+[[fa:مارکو پولو]]
+[[hif:Marco Polo]]
+[[fr:Marco Polo]]
+[[fy:Marko Polo]]
+[[fur:Marco Polo]]
+[[ga:Marco Polo]]
+[[gd:Marco Polo]]
+[[gl:Marco Polo]]
+[[gan:馬可·波羅]]
+[[gu:માર્કો પોલો]]
+[[xal:Поло, Марко]]
+[[ko:마르코 폴로]]
+[[hy:Մարկո Պոլո]]
+[[hi:मार्को पोलो]]
+[[hr:Marko Polo]]
+[[io:Marco Polo]]
+[[id:Marco Polo]]
+[[ia:Marco Polo]]
+[[is:Marco Polo]]
+[[it:Marco Polo]]
+[[he:מרקו פולו]]
+[[jv:Marco Polo]]
+[[kn:ಮಾರ್ಕೊ ಪೋಲೊ]]
+[[pam:Marco Polo]]
+[[ka:მარკო პოლო]]
+[[kw:Marco Polo]]
+[[sw:Marco Polo]]
+[[ku:Marco Polo]]
+[[la:Marcus Paulus Venetus]]
+[[lv:Marko Polo]]
+[[lb:Marco Polo]]
+[[lt:Markas Polas]]
+[[lij:Marco Polo]]
+[[lmo:Marco Polo]]
+[[hu:Marco Polo]]
+[[mk:Марко Поло]]
+[[ml:മാര്‍ക്കോ പോളോ]]
+[[mr:मार्को पोलो]]
+[[arz:ماركو بولو]]
+[[mzn:Marko Powlow]]
+[[ms:Marco Polo]]
+[[mn:Марко Поло]]
+[[my:မာကိုပိုလို]]
+[[nah:Marco Polo]]
+[[nl:Marco Polo]]
+[[ja:マルコ・ポーロ]]
+[[no:Marco Polo]]
+[[nn:Marco Polo]]
+[[oc:Marco Polo]]
+[[pag:Marco Polo]]
+[[pnb:مارکو پولو]]
+[[pl:Marco Polo]]
+[[pt:Marco Polo]]
+[[ro:Marco Polo]]
+[[qu:Marco Polo]]
+[[ru:Поло, Марко]]
+[[sco:Marco Polo]]
+[[sq:Marko Polo]]
+[[scn:Marcu Polu]]
+[[simple:Marco Polo]]
+[[sd:مارڪو پولو]]
+[[sk:Marco Polo]]
+[[sl:Marco Polo]]
+[[szl:Marco Polo]]
+[[sr:Марко Поло]]
+[[sh:Marko Polo]]
+[[su:Marco Polo]]
+[[fi:Marco Polo]]
+[[sv:Marco Polo]]
+[[tl:Marco Polo]]
+[[ta:மார்க்கோ போலோ]]
+[[tt:Марко Поло]]
+[[te:మార్కో పోలో]]
+[[th:มาร์โก โปโล]]
+[[tg:Марко Поло]]
+[[tr:Marco Polo]]
+[[uk:Марко Поло]]
+[[ur:مارکو پولو]]
+[[vec:Marco Polo]]
+[[vi:Marco Polo]]
+[[vo:Marco Polo]]
+[[fiu-vro:Polo Marco]]
+[[zh-classical:馬可·波羅]]
+[[war:Marco Polo]]
+[[wuu:马可·波罗]]
+[[yi:מארקא פאלא]]
+[[yo:Marco Polo]]
+[[zh-yue:馬哥孛羅]]
+[[bat-smg:Marco Polo]]
+[[zh:马可·波罗]]
