*Empty MediaWiki Message*

--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -5,7 +5,7 @@
 
 [[File:BlueMonkey.jpg|thumb|left|200px|<font color="green">Inkima</font>]]
 
-Mu mwaka wa 1929 iyo pariki yongerewe ubunini kuko yahise ifata ubutaka bw’ U [[Rwanda]] ndetse na Congo Mbiligi ariyo [[Repubulika Iharanira Demokarasi ya Congo]] uyu munsi. Icyo gihe iyi pariki yahise igira ubuso bungana na 8090 km2, ibyo byakozwe mu rwego rwo kuyihinduramo Parc Albert yacungwaga n’abakoloni b’Ababiligi dore ko ari nabo bakoronizaga ibyo bihugu byombi.
+Mu mwaka wa 1929 iyo pariki yongerewe ubunini kuko yahise ifata ubutaka bw’ U [[Rwanda]] ndetse na Congo Mbiligi ariyo [[Repubulika Iharanira Demokarasi ya Kongo]] uyu munsi. Icyo gihe iyi pariki yahise igira ubuso bungana na 8090 km2, ibyo byakozwe mu rwego rwo kuyihinduramo Parc Albert yacungwaga n’abakoloni b’Ababiligi dore ko ari nabo bakoronizaga ibyo bihugu byombi.
 
 Nyuma y’uko Congo ibonye ubwingenge mu 1960 ndetse n’U Rwanda mu 1962, Pariki y’Igihugu y’Ibirunga yahise icikamo ibice bibiri, buri gihugu kigira agace gicunga, ku ruhande rw’U Rwanda iyo pariki yahise itangira kugabanuka ubunini kuko abaturage batangiye kuyisatira bashaka aho gutura no guhinga.
 
