--- a/Pariki_ya_Nyungwe.mw
+++ b/Pariki_ya_Nyungwe.mw
@@ -27,6 +27,7 @@ Ukinjira muri Parike ya Nyungwe usanganirwa n’umwuka mwiza uhehereye, akayaga 
 *[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=40&news_id=9291 Pariki ya Nyungwe igaragaramo amoko y’inguge (chimpanzees) agera kuri 13]
 *[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9182 Ibiti birindwi bitangaje biboneka muri Pariki ya Nyungwe]
 *[http://www.rwandagateway.org/rw/spip.php?article56 Amapariki]
+*[http://www.goldenmonkeyhotel.com/spip.php?rubrique10 Golden Monkey hotel]
 
 [[Category:Rwanda]]
 [[Category:Pariki Nasiyonali]] 
