--- a/Curitiba.mw
+++ b/Curitiba.mw
@@ -12,6 +12,8 @@
 * http://www.curitiba-brazil.com 
 * [http://commons.wikimedia.org/wiki/Category:Curitiba Commons:Curitiba]
 
+[[Category:Amerika]] 
+
 [[ab:Куритиба]]
 [[af:Curitiba]]
 [[ak:Curitiba]]
