*Empty MediaWiki Message*

--- a/Gucura_k’umugore.mw
+++ b/Gucura_k’umugore.mw
@@ -8,6 +8,14 @@ Ugucura k’umugore bibanzirizwa no kubura imihango rimwe na rimwe cyangwa ntizi
 
 Nyuma umugore atangira kuva buhoro buhoro no kubura imihango igihe kirekire.
 
+Bimwe mu bimenyetso biboneka ku bagore bari gucura: Kumva ufite icyunzwe mu mubiri (67 %). Kubira ibyuya cyane (31 %). Kutabona ibitotsi (26 %). Kugira umushiha (''depression'') 38,5 %. Kugabanuka kw’inda ibyara (''atrophie vaginale'') (20 %). Gucika intege (18, 5%). Kuribwa umutwe (11 %). Guhindurwa kw’imisatsi (6,5 %). Guta ibiro (7 %). Guhinduka kw’agatuza (5,5 %)
+
+== Gucura k’umugore na [[Kanseri]] ==
+Mu bihugu byose, kuboneka kw’ama kanseri y’ibere n’izindi zo mu myanya ndangagistina ku mugore byiyongera hamwe n’imyaka kandi bikarushaho iyo umugore yacuze.
+
+Kanseri y’ibere ikunda kuboneka mu myaka hagati ya 45-50 na 65-70. Iboneka ku bagore batangiye imihango bakiri bato cyane,ku bagore bacuze batinze no kubafite umubyibuho ukabije bitewe n’ubwinshi bw’umusemburo witwa oestrogene.
+
+Ugereranyije, 90 % ya za [[kanseri za nyababyeyi]] (cancer de l’endomètre), 75 % ya za [[kanseri z’udusabo]] (cancer de l’ovaire) na 65% ya za [[kanseri z’inkondo y’umura]]
 
 == Imiyoboro ==
 *http://www.agasaro.com/spip.php?article84
