/* Gucura k’umugore na Kanseri */

--- a/Gucura_k’umugore.mw
+++ b/Gucura_k’umugore.mw
@@ -15,7 +15,7 @@ Mu bihugu byose, kuboneka kw’ama kanseri y’ibere n’izindi zo mu myanya nda
 
 Kanseri y’ibere ikunda kuboneka mu myaka hagati ya 45-50 na 65-70. Iboneka ku bagore batangiye imihango bakiri bato cyane,ku bagore bacuze batinze no kubafite umubyibuho ukabije bitewe n’ubwinshi bw’umusemburo witwa oestrogene.
 
-Ugereranyije, 90 % ya za [[kanseri za nyababyeyi]] (cancer de l’endomètre), 75 % ya za [[kanseri z’udusabo]] (cancer de l’ovaire) na 65% ya za [[kanseri z’inkondo y’umura]]
+Ugereranyije, 90 % ya za [[kanseri za nyababyeyi]] (''cancer de l’endomètre''), 75 % ya za [[kanseri z’udusabo]] (''cancer de l’ovaire'') na 65% ya za [[kanseri z’inkondo y’umura]]
 
 == Imiyoboro ==
 *http://www.agasaro.com/spip.php?article84
