--- a/Kanseri.mw
+++ b/Kanseri.mw
@@ -20,6 +20,7 @@
 *[[Kanseri yo mu murerantanga ngabo]]
 *[[Kanseri yo mu gasabo k’intangangore]] cyangwa [[Kanseri ya y’imirerantanga]]  
 *[[Kanseri yo muri nyababyeyi]]
+*[[kanseri za nyababyeyi]] 
 *[[Kanseri yo mu ruhago]]  (''vessie'')
 
 == Imiyoboro ==
