*Empty MediaWiki Message*

--- a/Kanseri.mw
+++ b/Kanseri.mw
@@ -13,7 +13,7 @@
 *[[Kanseri yo mu bihaha]] 
 *[[Kanseri yo mu gifu]]  (''estomac'')
 *[[Kanseri y’umwijima]]  (''foie'')
-*[[Kanseri yo mu mara]] cyangwa [[Kanseri y’umura]]
+*[[Kanseri yo mu mara]] cyangwa [[Kanseri y’umura]], [[Kanseri z’inkondo y’umura]]
 *[[Kanseri yo mu mura]]
 *[[Kanseri yo mu mpyiko]]  (''rein'')
 *[[Kanseri yo mu rwagashya]]  (''pancréas'')
