/* Gucura k’umugore na Kanseri */

--- a/Gucura_k’umugore.mw
+++ b/Gucura_k’umugore.mw
@@ -10,6 +10,19 @@ Nyuma umugore atangira kuva buhoro buhoro no kubura imihango igihe kirekire.
 
 Bimwe mu bimenyetso biboneka ku bagore bari gucura: Kumva ufite icyunzwe mu mubiri (67 %). Kubira ibyuya cyane (31 %). Kutabona ibitotsi (26 %). Kugira umushiha (''depression'') 38,5 %. Kugabanuka kw’inda ibyara (''atrophie vaginale'') (20 %). Gucika intege (18, 5%). Kuribwa umutwe (11 %). Guhindurwa kw’imisatsi (6,5 %). Guta ibiro (7 %). Guhinduka kw’agatuza (5,5 %)
 
+Nkuko bisobanurwa mu bitabo byinshi, ugucura kujyana na bimwe muri ibi bikurikira :
+*Umuryango umuntu akomokamo (''hérédité'') : umugore n’umwana we w’umukobwa bacura hafi ku myaka imwe.
+*Ubwoko ,ikirere kiranga aho umuntu atuye (''le climat'') n’imibereho ye (''conditions socio-économiques'').
+*Kunywa itabi bituma gucura biba hafi amezi 18 mbere y’igihe cyari giteganyijwe.
+
+== Icyitonderwa ==
+Igihe umwana w’umukobwa atangira kujya mu mihango, umubare w’inda cyangwa gukoresha uburyo buringaniza urubyaro nta ruhare bifite ku gihe cyo gucura.
+
+== Ingaruka ==
+Kurwaragurika bikunda kuba iyo umugore yacuze, akenshi biba bijyanye n’ibimenyetso byayo n’izindi ndwara zijyanye n’izabukuru.
+*Kurwaragurika no gupfa bitewe n’indwara z’umutima biba bike k’umugore ugereranyije n’umugabo ariko bikiyongera iyo umugore yacuze.
+*Koroha kw’amagufa bigenda byiyongera hamwe no gusaza iyo umugore acuze. Niyo mpamvu abagore bacuze bakunda kugira imvune y’amagufa.
+
 == Gucura k’umugore na [[Kanseri]] ==
 Mu bihugu byose, kuboneka kw’ama kanseri y’ibere n’izindi zo mu myanya ndangagistina ku mugore byiyongera hamwe n’imyaka kandi bikarushaho iyo umugore yacuze.
 
