/* Gucura k’umugore na Kanseri */

--- a/Gucura_k’umugore.mw
+++ b/Gucura_k’umugore.mw
@@ -24,6 +24,8 @@ Kurwaragurika bikunda kuba iyo umugore yacuze, akenshi biba bijyanye n’ibimeny
 *Koroha kw’amagufa bigenda byiyongera hamwe no gusaza iyo umugore acuze. Niyo mpamvu abagore bacuze bakunda kugira imvune y’amagufa.
 
 == Gucura k’umugore na [[Kanseri]] ==
+80 ku ijana (80%) y’abagore bacuze bavuga yuko bumva hari icyahindutse mu magara yabo mu mwaka wa mbere bacuze ariko ingaruka zikomeye zitangira kuboneka mu myaka icumi umugore yarabuze imisemburo. Gucura kw’umugore na kanseri
+
 Mu bihugu byose, kuboneka kw’ama kanseri y’ibere n’izindi zo mu myanya ndangagistina ku mugore byiyongera hamwe n’imyaka kandi bikarushaho iyo umugore yacuze.
 
 Kanseri y’ibere ikunda kuboneka mu myaka hagati ya 45-50 na 65-70. Iboneka ku bagore batangiye imihango bakiri bato cyane,ku bagore bacuze batinze no kubafite umubyibuho ukabije bitewe n’ubwinshi bw’umusemburo witwa oestrogene.
