/* Gucura k’umugore na Kanseri */

--- a/Gucura_k’umugore.mw
+++ b/Gucura_k’umugore.mw
@@ -32,6 +32,8 @@ Kanseri y’ibere ikunda kuboneka mu myaka hagati ya 45-50 na 65-70. Iboneka ku 
 
 Ugereranyije, 90 % ya za [[kanseri za nyababyeyi]] (''cancer de l’endomètre''), 75 % ya za [[kanseri z’udusabo]] (''cancer de l’ovaire'') na 65% ya za [[kanseri z’inkondo y’umura]]
 
+Ukuboneka kwa kanseri y’inkondo y’umura bituma biba ngombwa ko buri mugore wese wacuze ayisuzumisha.
+
 == Imiyoboro ==
 *http://www.agasaro.com/spip.php?article84
 
