*Empty MediaWiki Message*

--- a/Gwantanamo.mw
+++ b/Gwantanamo.mw
@@ -8,7 +8,7 @@ Ikegeranyo cyakozwe guhera mu mwaka 2001 kugeza ubu, kirerekana ko abantu bagera
 
 Abitwaza ko baharanira uburenganzira bw’ikremwamuntu, nibo bitwaza ubwo burengenzira batera ibihugu bikennye no kurasa abaturage babyo bakoresheje intwaro zikomeye, bakica muri ibyo bihugu inzirakarengane zirimo abana, abagore n’abasaza.
 
-Urugero rw’ukuri rw’ibyo tumaze kuvuga ni ikegeranyo cya vuba aha kivuga ko Yuran yakoreshejwe n’ingabo za Amerika mu ntambara irwana muri Iraq na Afghanistan yatumye muri ibyo bihugu haduka ibyorezo by’indwara zidasanzwe zica benshi muri ibyo bihugu.  Icyo kegeranyo cyakomeje kivuga ko muri biriya bihugu Amerika irwanamo, ibirema byiyongera n’abana bavukana uburema bakaba bamaze kuba benshi, ku buryo mu myaka mike iri imbere muri biriya bihugu hazajya havuka abana bake badafite ubusembwa batewe n’intwaro zikoreshwa mu mirwano ihabera.
+Urugero rw’ukuri rw’ibyo tumaze kuvuga ni ikegeranyo cya vuba aha kivuga ko Yuran yakoreshejwe n’ingabo za Amerika mu ntambara irwana muri Iraq na [[Afuganisitani]] yatumye muri ibyo bihugu haduka ibyorezo by’indwara zidasanzwe zica benshi muri ibyo bihugu.  Icyo kegeranyo cyakomeje kivuga ko muri biriya bihugu Amerika irwanamo, ibirema byiyongera n’abana bavukana uburema bakaba bamaze kuba benshi, ku buryo mu myaka mike iri imbere muri biriya bihugu hazajya havuka abana bake badafite ubusembwa batewe n’intwaro zikoreshwa mu mirwano ihabera.
 
 Muri ako kanya Amerika iba iri kubangamira uburengenzira bw’ikiremwamuntu, iba yiyita ko ari igihugu cya demukrasi kinaharanira uburenganzira bw’ikiremwamuntu, n’ibyo byose umuryango mpuzamahanga wananiwe kumvisha icyo gihugu ko kigomba gufunga agasho gahonyererwamo uburenganzira bw’ikiremwamuntu ka Gwantanamo na ka [[Abu Gurayib]].
 
