*Empty MediaWiki Message*

--- a/Gwantanamo.mw
+++ b/Gwantanamo.mw
@@ -16,3 +16,26 @@ Muri ako kanya Amerika iba iri kubangamira uburengenzira bw’ikiremwamuntu, iba
 *[http://shiyarwanda.com/index.php?option=com_content&view=article&id=572:1&catid=81:1&Itemid=111 Uburenganzira bw’ikiremwa muntu: Urwitwazo rwa politike rw’ibihugu by’Iburengerazuba]
 
 [[Category:Leta Zunze Ubumwe z’Amerika]]
+
+[[ar:معتقل جوانتانامو]]
+[[az:Quantanamo həbs düşərgəsi]]
+[[da:Guantanamo-lejren]]
+[[de:Guantanamo Bay Naval Base#Gefangenenlager_Camp_X-Ray_und_Camp_Delta]]
+[[es:Centro de detención de Guantánamo]]
+[[eo:Malliberejo de Guantanamo]]
+[[fr:Camp de Guantanamo]]
+[[id:Kamp Tahanan Teluk Guantánamo]]
+[[it:Campo di prigionia di Guantánamo]]
+[[he:מתקן המעצר בגואנטנמו]]
+[[ml:ഗ്വാണ്ടനാമോ ബേ തടവറ]]
+[[ja:グァンタナモ米軍基地]]
+[[no:Guantanamobukten fangeleir]]
+[[nn:Fangeleiren ved Guantánamobukta]]
+[[pl:Więzienie Guantanamo]]
+[[pt:Prisão de Guantánamo]]
+[[ru:Тюрьма в Гуантанамо]]
+[[fi:Guantanamo Bayn vankileiri]]
+[[tr:Guantanamo Kampı]]
+[[uk:Табір Гуантанамо]]
+[[vi:Trại giam Vịnh Guantánamo]]
+[[zh:關塔那摩灣拘留營]]
