--- a/Gwantanamo.mw
+++ b/Gwantanamo.mw
@@ -34,6 +34,7 @@ Muri ako kanya Amerika iba iri kubangamira uburengenzira bw’ikiremwamuntu, iba
 [[pl:Więzienie Guantanamo]]
 [[pt:Prisão de Guantánamo]]
 [[ru:Тюрьма в Гуантанамо]]
+[[rw:Guantanamo Bay detention camp]]
 [[fi:Guantanamo Bayn vankileiri]]
 [[tr:Guantanamo Kampı]]
 [[uk:Табір Гуантанамо]]
