*Empty MediaWiki Message*

--- a/Irani.mw
+++ b/Irani.mw
@@ -4,3 +4,182 @@
 '''Irani''' cyangwa '''Repubulika y’Ubuyisilamu ya Irani'''
  
 [[Category:Ibihugu]]
+
+[[ace:Iran]]
+[[af:Iran]]
+[[als:Iran]]
+[[am:ፋርስ]]
+[[ang:Persealand]]
+[[ar:إيران]]
+[[an:Irán]]
+[[arc:ܐܝܪܐܢ]]
+[[frp:Éran]]
+[[as:ইৰাণ]]
+[[ast:Irán]]
+[[gn:Irán]]
+[[az:İran]]
+[[bn:ইরান]]
+[[zh-min-nan:Iran]]
+[[be:Іран]]
+[[be-x-old:Іран]]
+[[bcl:Iran]]
+[[bo:ཡི་ལང་།]]
+[[bs:Iran]]
+[[br:Iran]]
+[[bg:Иран]]
+[[ca:Iran]]
+[[cv:Ислам Республики Иран]]
+[[ceb:Iran]]
+[[cs:Írán]]
+[[co:Iranu]]
+[[cy:Iran]]
+[[da:Iran]]
+[[pdc:Iraen]]
+[[de:Iran]]
+[[dv:އީރާން]]
+[[nv:Iiwą́ą́]]
+[[dsb:Iran]]
+[[dz:ཨི་རཱན་]]
+[[et:Iraan]]
+[[el:Ιράν]]
+[[es:Irán]]
+[[eo:Irano]]
+[[ext:Irán]]
+[[eu:Iran]]
+[[fa:ایران]]
+[[hif:Iran]]
+[[fo:Iran]]
+[[fr:Iran]]
+[[fy:Iran]]
+[[ga:An Iaráin]]
+[[gv:Yn Eeraan]]
+[[gd:Ioràn]]
+[[gl:Irán - ایران]]
+[[gan:伊朗]]
+[[gag:İran]]
+[[gu:ઈરાન]]
+[[hak:Yî-làn]]
+[[xal:Сарта Иранмудин Орн]]
+[[ko:이란]]
+[[ha:Iran]]
+[[haw:‘Ilana]]
+[[hy:Իրան]]
+[[hi:ईरान]]
+[[hsb:Iran]]
+[[hr:Iran]]
+[[io:Iran]]
+[[ilo:Iran]]
+[[bpy:ইরান]]
+[[id:Iran]]
+[[ia:Iran]]
+[[ie:Iran]]
+[[os:Иран]]
+[[is:Íran]]
+[[it:Iran]]
+[[he:איראן]]
+[[jv:Iran]]
+[[kn:ಇರಾನ್]]
+[[pam:Iran]]
+[[ka:ირანი]]
+[[ks:ईरान]]
+[[csb:Iran]]
+[[kk:Иран]]
+[[kw:Iran]]
+[[ky:Иран]]
+[[sw:Uajemi]]
+[[kv:Иран]]
+[[ht:Iran]]
+[[ku:Îran]]
+[[lad:Iran]]
+[[la:Irania]]
+[[lv:Irāna]]
+[[lb:Iran]]
+[[lt:Iranas]]
+[[lij:Iran]]
+[[li:Iraan]]
+[[ln:Iran]]
+[[jbo:iran]]
+[[lmo:Iran]]
+[[hu:Irán]]
+[[mk:Иран]]
+[[ml:ഇറാൻ]]
+[[mi:Īrāna]]
+[[mr:इराण]]
+[[arz:ايران]]
+[[mzn:ایران]]
+[[ms:Iran]]
+[[mn:Иран]]
+[[nah:Iran]]
+[[na:Iran]]
+[[nl:Iran]]
+[[ne:इरान]]
+[[new:इरान]]
+[[ja:イラン]]
+[[pih:Eraan]]
+[[no:Iran]]
+[[nn:Iran]]
+[[nov:Iran]]
+[[oc:Iran]]
+[[or:ଇରାନ]]
+[[uz:Eron]]
+[[pnb:ایران]]
+[[pap:Iran]]
+[[ps:ایران]]
+[[pcd:Iran]]
+[[pms:Iran]]
+[[nds:Iran]]
+[[pl:Iran]]
+[[pt:Irão]]
+[[crh:İran]]
+[[ro:Iran]]
+[[rm:Iran]]
+[[qu:Iran]]
+[[ru:Иран]]
+[[sah:Иран]]
+[[se:Iran]]
+[[sa:ईरान]]
+[[sc:Iran]]
+[[sco:Iran]]
+[[stq:Iran]]
+[[sq:Irani]]
+[[scn:Iran]]
+[[simple:Iran]]
+[[ss:I-Irani]]
+[[sk:Irán]]
+[[sl:Iran]]
+[[szl:Iran]]
+[[so:Iiraan]]
+[[ckb:ئێران]]
+[[sr:Иран]]
+[[sh:Iran]]
+[[su:Iran]]
+[[fi:Iran]]
+[[sv:Iran]]
+[[tl:Iran]]
+[[ta:ஈரான்]]
+[[kab:Iran]]
+[[tt:Иран]]
+[[te:ఇరాన్]]
+[[th:ประเทศอิหร่าน]]
+[[tg:Эрон]]
+[[tr:İran]]
+[[tk:Eýran]]
+[[udm:Иран]]
+[[uk:Іран]]
+[[ur:ایران]]
+[[ug:ئىران]]
+[[za:Iran]]
+[[vec:Iran]]
+[[vi:Iran]]
+[[vo:Lirän]]
+[[wa:Iran]]
+[[zh-classical:伊朗]]
+[[war:Iran]]
+[[wo:Iraan]]
+[[wuu:伊朗]]
+[[yi:איראן]]
+[[yo:Ìránì]]
+[[zh-yue:伊朗]]
+[[diq:İran]]
+[[bat-smg:Irans]]
+[[zh:伊朗]]
