*Empty MediaWiki Message*

--- a/Inguge.mw
+++ b/Inguge.mw
@@ -5,7 +5,7 @@
 
 Dore amwe mu moko y’inguge ziri muri [[Pariki ya Nyungwe]]: [[icyondi]] (''Cercopithecus lhoesti''), [[igihinyage]], [[inkomo]] (''Colobus angolensis ruwenzori''), [[inkima]] (''Cercopithecus mitis doggetti & kandti'' ), [[inyenzi]], [[impundu]] (''Pan troglodytes schweinfurtii'').
 
-== Species ==
+== Amoko ==
 * ''Cercopithecus aethiops '' ([[inkendi]])
 * ''Cercopithecus albigena johnostonii'' ([[igishabaga]])
 * ''Cercopithecus ascanius schmidti'' ([[umukunga]])
