/* Amagambo n'interuro mu ikinyaturukiya */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -55,6 +55,7 @@
 *'''Yiyorsunuz''' &ndash; Murarya
 *'''Yiyorlar''' &ndash; Bararya
 
+== Alfabeti y’ikinyaturukiya ==
 
 [[Category:Indimi z’ikinyaturukiya]]
 
