--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -56,6 +56,14 @@
 *'''Yiyorlar''' &ndash; Bararya
 
 == Alfabeti y’ikinyaturukiya ==
+{|class="wikitable" style="border-collapse:collapse;text-align:center;" align="center"
+|- 	 
+|bgcolor="#EFEFEF" align="center" colspan="29" |
+|-
+| A || B || C || Ç || D || E || F || G || Ğ || H || I || İ || J || K || L || M || N || O || Ö || P || R || S || Ş || T || U || Ü || V || Y || Z || 
+|-
+| a || b || c || ç || d || e || f || g || ğ || h || i || i || j || k || l || m || n || o || ö || p || r || s || ş || t || u || ü || v || y || z || 
+|}
 
 [[Category:Indimi z’ikinyaturukiya]]
 
