--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -65,6 +65,9 @@
 | a || b || c || ç || d || e || f || g || ğ || h || i || i || j || k || l || m || n || o || ö || p || r || s || ş || t || u || ü || v || y || z || 
 |}
 
+== Imiyoboro ==
+* [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu kşnyaturukiya)</font>
+
 [[Category:Indimi z’ikinyaturukiya]]
 
 [[ace:Bahsa Tureuki]]
