--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -66,7 +66,7 @@
 |}
 
 == Imiyoboro ==
-* [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu kşnyaturukiya)</font>
+* [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu ikinyaturukiya)</font>
 
 [[Category:Indimi z’ikinyaturukiya]]
 
