--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -56,14 +56,18 @@
 *'''Yiyorlar''' &ndash; Bararya
 
 == Alfabeti y’ikinyaturukiya ==
-{|class="wikitable" style="border-collapse:collapse;text-align:center;" align="center"
-|- 	 
-|bgcolor="#EFEFEF" align="center" colspan="29" |
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
 |-
-| A || B || C || Ç || D || E || F || G || Ğ || H || I || İ || J || K || L || M || N || O || Ö || P || R || S || Ş || T || U || Ü || V || Y || Z || 
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
 |-
-| a || b || c || ç || d || e || f || g || ğ || h || i || i || j || k || l || m || n || o || ö || p || r || s || ş || t || u || ü || v || y || z || 
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[Ç]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[Ğ]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[İ]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[Ö]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[Ş]]||width=3% align="center"|[[T]]||width=3% align="center"|[[U]]||width=3% align="center"|[[Ü]]||width=3% align="center"|[[V]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|a||align="center"|b||align="center"|c||align="center"|ç||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|ğ||align="center"|h||align="center"|ı||align="center"|i||align="center"|j||align="center"|k||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|ö||align="center"|p||align="center"|r||align="center"|s||align="center"|ş||align="center"|t||align="center"|u||align="center"|ü||align="center"|v||align="center"|y||align="center"|z
 |}
+</center>
 
 == Imiyoboro ==
 * [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu ikinyaturukiya)</font>
