--- a/Inyama.mw
+++ b/Inyama.mw
@@ -8,6 +8,7 @@ Ubushakashatsi bunyuranye bumaze gukorwa bumaze kwerekana ko inyama zifite uruha
 *Inyama y'[[inka]]
 *inyama y’[[ihene]]
 *inyama y’[[intama]]
+*inyama y’[[ingurube]] 
 *inyama y’[[inkoko]] 
 
 [[Category:Ibiribwa]]
