--- a/Inyama.mw
+++ b/Inyama.mw
@@ -4,7 +4,7 @@
 
 Ubushakashatsi bunyuranye bumaze gukorwa bumaze kwerekana ko inyama zifite uruhare runini mu gutera [[kanseri]] : yo mu bwonko, ibihaha, igifu, impyiko, uruhago, nyababyeyi, imiyobora ntanga, prostate, n’izindi zitavuzwe. Umuntu uriye ikilo 1 cy’inyama zokeje aba yinjije benzopirene itera kanseri ingana n’iy’umuntu wanyoye imiti 600 y’itabi (''cigarettes'') kandi kanseri ikomoka mu nyama yongerwa n’uko zatetswe cyane no kotswa, rero umuntu ategewe hose.
 
-== ==
+== Amoko ==
 *Inyama y'[[inka]]
 *inyama y’[[ihene]]
 *inyama y’[[intama]]
