--- a/Gwantanamo.mw
+++ b/Gwantanamo.mw
@@ -21,6 +21,7 @@ Muri ako kanya Amerika iba iri kubangamira uburengenzira bw’ikiremwamuntu, iba
 [[az:Quantanamo həbs düşərgəsi]]
 [[da:Guantanamo-lejren]]
 [[de:Guantanamo Bay Naval Base#Gefangenenlager_Camp_X-Ray_und_Camp_Delta]]
+[[en:Guantanamo Bay detention camp]]
 [[es:Centro de detención de Guantánamo]]
 [[eo:Malliberejo de Guantanamo]]
 [[fr:Camp de Guantanamo]]
@@ -34,7 +35,6 @@ Muri ako kanya Amerika iba iri kubangamira uburengenzira bw’ikiremwamuntu, iba
 [[pl:Więzienie Guantanamo]]
 [[pt:Prisão de Guantánamo]]
 [[ru:Тюрьма в Гуантанамо]]
-[[rw:Guantanamo Bay detention camp]]
 [[fi:Guantanamo Bayn vankileiri]]
 [[tr:Guantanamo Kampı]]
 [[uk:Табір Гуантанамо]]
