--- a/Gashyantare.mw
+++ b/Gashyantare.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry février.jpg|thumb|250px|<font color="green">ukwezi kwa kabiri</font>]]
 
-'''Gashyantare''' (izina mu [[cyongereza]]: ''February'' ; izina mu [[gifaransa]]: ''Février'' ) cyangwa '''ukwezi kwa kabiri'''
+'''Gashyantare''' (izina mu [[cyongereza]]: ''February'' ; izina mu [[gifaransa]]: ''Février'' ) cyangwa '''[[ukwezi]] kwa kabiri'''
 
 [[Category:Gashyantare| ]]
 
