--- a/Mata.mw
+++ b/Mata.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry avril.jpg|thumb|250px|<font color="green">ukwezi kwa kane</font>]]
 
-'''Mata''' (izina mu [[cyongereza]]: ''April'' ; izina mu [[gifaransa]]: ''Avril'' ) cyangwa '''ukwezi kwa kane'''
+'''Mata''' (izina mu [[cyongereza]]: ''April'' ; izina mu [[gifaransa]]: ''Avril'' ) cyangwa '''[[ukwezi]] kwa kane'''
 
 [[Category:Mata| ]]
 
